# aerodynamics-cli

./: README.rst  pyproject.toml
tataero/: tat.py  tat_cli.py
tests/: test_tataero.py
