[tool.poetry]
name = "tataero"
version = "0.1.0"
description = ""
authors = ["Marc PM <marcpm@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tat = "tataero.tat_cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

